syntax = "proto3";

option go_package = "github.com/lapeko/udemy__grpc-golang/calculator/proto";

message PrimeRequest {
  uint32 number = 1;
}

message PrimeResponse {
  uint32 prime = 1;
}

service PrimesStreamingService {
  rpc GetPrimes (PrimeRequest) returns (stream PrimeResponse);
}